--- a/src/PrimerComponente.css
+++ b/src/PrimerComponente.css
@@ -6,15 +6,14 @@
     padding: 20px;
     margin: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    color: #000
 }
 
-.mi-componente h2 {
+.primerComponente h2 {
     color: #333;
     margin-bottom: 10px;
 }
 
-.mi-componente p {
+.primerComponente p {
     color: #666;
     font-size: 16px;
 }
